--- a/starter/sass/layout/_navigation.scss
+++ b/starter/sass/layout/_navigation.scss
@@ -1,4 +1,16 @@
 .navigation {
+    -moz-user-select: -moz-none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+
+   /*
+     Introduced in IE 10.
+     See http://ie.microsoft.com/testdrive/HTML5/msUserSelect/
+   */
+   -ms-user-select: none;
+   user-select: none;
+
+
     &__checkbox {
         display: none;
     }
